syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.gateway.grpc";

service ActuatorService {
  rpc TurnOnDevice (ActuatorRequest) returns (ActuatorResponse);
  rpc TurnOffDevice (ActuatorRequest) returns (ActuatorResponse);
}

message ActuatorRequest {
  string name = 1;
  int64 deviceId = 2;
  string command = 3;
  float value = 4;
}

message ActuatorResponse {
  bool success = 2;
}
